--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-	"watch": "nodemon index.js",
-	"build:ui": "rm -rf build && cd ../fullstackopen/osa2/puhelinluettelo && npm run build --prod && cp -r build ../../../phonebook_backend/",
+    "watch": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../fullstackopen/osa2/puhelinluettelo && npm run build --prod && cp -r build ../../../phonebook_backend/",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.8.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
