--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "watch": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../fullstackopen/osa2/puhelinluettelo && npm run build --prod && cp -r build ../../../phonebook_backend/",
-    "deploy": "git push heroku master",
+	"deploy": "git push heroku master",
+	"lint": "eslint .",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
@@ -23,6 +24,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.2"
   }
 }
